fix firebase cloud messaging on ios (and android?)

--- a/src/app/choose-mode/choose-mode.page.scss
+++ b/src/app/choose-mode/choose-mode.page.scss
@@ -1,15 +1,20 @@
 .choose-daily-quiz-area {
-    margin-top: 4vh;
+  margin-top: 4vh;
 }
 
 .how-many-people {
-    --min-height: 0px;
+  --min-height: 0px;
 }
 
 ion-img {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  width: 50%;
+}
+
+.register-for-notifs {
+  margin-inline: 1rem;
+  padding-top: 2rem;
 }
